update:question request and response body document & remove healthcheck endpoint
