# api/swagger.json
@@ -127,28 +127,6 @@
                 }
             }
         },
-        "/healthcheck": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Server"
-                ],
-                "summary": "Health check",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.HealthCheck"
-                        }
-                    }
-                }
-            }
-        },
         "/question": {
             "get": {
                 "description": "Get all questions handled by teacher",
@@ -168,7 +146,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_iarsham_teacher-tool-api_internal_models.Questions"
+                                "$ref": "#/definitions/response.questionResponse"
                             }
                         }
                     },
@@ -612,6 +590,9 @@
                 "title"
             ],
             "properties": {
+                "file": {
+                    "$ref": "#/definitions/multipart.FileHeader"
+                },
                 "grade": {
                     "type": "integer",
                     "enum": [
@@ -621,10 +602,12 @@
                         3,
                         4,
                         5
-                    ]
+                    ],
+                    "example": 5
                 },
                 "lesson": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "level": {
                     "type": "integer",
@@ -632,10 +615,12 @@
                         0,
                         1,
                         2
-                    ]
+                    ],
+                    "example": 2
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Math Stuff"
                 }
             }
         },
@@ -696,42 +681,6 @@
                 }
             }
         },
-        "github_com_iarsham_teacher-tool-api_internal_models.Questions": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "file": {
-                    "type": "string"
-                },
-                "grade": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "lesson": {
-                    "type": "string"
-                },
-                "level": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "used": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                },
-                "views": {
-                    "type": "integer"
-                }
-            }
-        },
         "github_com_iarsham_teacher-tool-api_internal_models.Templates": {
             "type": "object",
             "properties": {
@@ -773,15 +722,6 @@
                 "error": {
                     "type": "string",
                     "example": "bad request"
-                }
-            }
-        },
-        "response.HealthCheck": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string",
-                    "example": "available"
                 }
             }
         },
@@ -837,36 +777,45 @@
         "response.QuestionData": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
+                "createdAt": {
+                    "type": "string",
+                    "example": "2024-01-29T03:09:00+03:30"
                 },
                 "file": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "domain.com/media/image.png"
                 },
                 "grade": {
-                    "type": "integer"
+                    "type": "string",
+                    "example": "fifth"
                 },
                 "id": {
                     "type": "integer",
                     "example": 1
                 },
                 "lesson": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12"
                 },
                 "level": {
-                    "type": "integer"
+                    "type": "string",
+                    "example": "advanced"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Math statistics"
                 },
                 "used": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 195
                 },
-                "user_id": {
-                    "type": "integer"
+                "userID": {
+                    "type": "integer",
+                    "example": 10
                 },
                 "views": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 666
                 }
             }
         },
@@ -951,6 +900,51 @@
                 "error": {
                     "type": "string",
                     "example": "wrong password"
+                }
+            }
+        },
+        "response.questionResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string",
+                    "example": "2024-01-29T03:09:00+03:30"
+                },
+                "file": {
+                    "type": "string",
+                    "example": "domain.com/media/image.png"
+                },
+                "grade": {
+                    "type": "string",
+                    "example": "fifth"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "lesson": {
+                    "type": "string",
+                    "example": "12"
+                },
+                "level": {
+                    "type": "string",
+                    "example": "advanced"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Math statistics"
+                },
+                "used": {
+                    "type": "integer",
+                    "example": 195
+                },
+                "userID": {
+                    "type": "integer",
+                    "example": 10
+                },
+                "views": {
+                    "type": "integer",
+                    "example": 666
                 }
             }
         },
