# pkg/response/swagger.go
@@ -1,6 +1,9 @@
 package response
 
-import "github.com/iarsham/teacher-tool-api/internal/models"
+import (
+	"github.com/iarsham/teacher-tool-api/internal/models"
+	"time"
+)
 
 type HealthCheck struct {
 	Status string `example:"available"`
@@ -51,13 +54,13 @@ type TemplateExists struct {
 	Error string `example:"template already exists"`
 }
 
-type AllQuestions []models.Questions
+type AllQuestions []questionResponse
 
 type QuestionNotFound struct {
 	Error string `example:"question not found"`
 }
 
-type QuestionData models.Questions
+type QuestionData questionResponse
 
 type QuestionAlreadyExists struct {
 	Error string `example:"question already exists"`
@@ -65,4 +68,17 @@ type QuestionAlreadyExists struct {
 
 type QuestionCreated struct {
 	Response string `example:"question created"`
+}
+
+type questionResponse struct {
+	ID        uint64    `example:"1"`
+	Lesson    string    `example:"12"`
+	Title     string    `example:"Math statistics"`
+	Grade     string    `example:"fifth"`
+	Level     string    `example:"advanced"`
+	Views     uint64    `example:"666"`
+	Used      uint64    `example:"195"`
+	File      string    `example:"domain.com/media/image.png"`
+	UserID    uint64    `example:"10"`
+	CreatedAt time.Time `example:"2024-01-29T03:09:00+03:30"`
 }
